Tweak padding on budget measure controls, and fix radio buttons having a sub pixel of white between left option and border on IE.

--- a/src/components/RadioButtons.scss
+++ b/src/components/RadioButtons.scss
@@ -17,6 +17,7 @@
   color: $buttonPrimaryColor;
   border-radius: 0px;
   background-color: transparent;
+  margin-left: -1px;
   margin-top: -1px;
   margin-bottom: -1px;
   position: relative;
