--- a/src/partition/budget_measures_subapp/BudgetMeasuresControls.scss
+++ b/src/partition/budget_measures_subapp/BudgetMeasuresControls.scss
@@ -4,9 +4,9 @@
 .budget-measures-partition-controls {
     background-color: #9c9c9c;
     border-radius: 10px;
-    padding-top: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-top: 6px;
+    padding-left: 6px;
+    padding-right: 6px;
     padding-bottom: 10px;
     margin-bottom: -20px;
   
